@@ -8,10 +8,10 @@ typedef struct
   uint32_t wbuf[16];
 } sha256_context;
 
-extern void sha256 (const unsigned char *input, unsigned int ilen,
-		    unsigned char output[32]);
-extern void sha256_start (sha256_context *ctx);
-extern void sha256_finish (sha256_context *ctx, unsigned char output[32]);
-extern void sha256_update (sha256_context *ctx, const unsigned char *input,
-			   unsigned int ilen);
-extern void sha256_process (sha256_context *ctx);
+void sha256 (const unsigned char *input, unsigned int ilen,
+	     unsigned char output[32]);
+void sha256_start (sha256_context *ctx);
+void sha256_finish (sha256_context *ctx, unsigned char output[32]);
+void sha256_update (sha256_context *ctx, const unsigned char *input,
+		    unsigned int ilen);
+void sha256_process (sha256_context *ctx);
